--- a/public/locales/ur/common.json
+++ b/public/locales/ur/common.json
@@ -6,6 +6,7 @@
     "completeProfile": "اپنی پروفائل مکمل کریں",
     "description": "ہم آپ کے مطالعہ منصوبہ کو AI سے بہتر بنائیں گے اور آپ کے ڈیش بورڈ کو حسبِ ضرورت بنائیں گے۔",
     "preferredLanguage": "ترجیحی زبان",
+    "explanationLanguage": "تشریحی زبان",
     "saveDraft": "ڈرافٹ محفوظ کریں",
     "finishContinue": "ختم کریں اور جاری رکھیں"
   },
