--- a/public/locales/hi/common.json
+++ b/public/locales/hi/common.json
@@ -12,5 +12,12 @@
   },
   "userMenu": {
     "language": "भाषा"
+  },
+  "premiumPin": {
+    "info": "PIN ईमेल निमंत्रणों के माध्यम से भेजे जाते हैं.",
+    "noPinPrefix": "यदि आपके पास नहीं है,",
+    "contactSupport": "समर्थन से संपर्क करें",
+    "or": "या",
+    "viewPricing": "मूल्य निर्धारण देखें"
   }
 }
